Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1055

recovery-mds osd_handler.c:1966:osd_declare_object_destroy()) ASSERTION(!lu_object_is_dying(dt->do_lu.lo_header)) failed

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • Lustre 2.2.0
    • Lustre 2.2.0
    • None
    • Hyperion - Chaos5 clients and servers
    • 3
    • 4736

    Description

      Running recovery-scale flavor MDS on Hyperion, MDS failed after 3 failovers - MDT shows as mounted via df, but unmounted in /proc/mounts. mount -f appears to have cleared the mount.
      Syslog and lustre log attached

      Attachments

        Issue Links

          Activity

            People

              niu Niu Yawei (Inactive)
              cliffw Cliff White (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: