LU-1055 remove improper assert in osd_declare_object_destroy

After recovery, orphan cleanup could race with the client unlink on
close, so the LASSERT on lu_object_is_dying() should be moved from
declare stage into the real destroy function.

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: Ibc4ad0613d907ab98b653d5a64ce54e1f018dcb2
Reviewed-on: http://review.whamcloud.com/2083
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>