lustre/osd-ldiskfs/osd_handler.c
@@ -1996,7 +1996,6 @@ static int osd_declare_object_destroy(const struct lu_env *env,
         oh = container_of0(th, struct osd_thandle, ot_super);
         LASSERT(oh->ot_handle == NULL);
         LASSERT(inode);
-        LASSERT(!lu_object_is_dying(dt->do_lu.lo_header));
 
         OSD_DECLARE_OP(oh, destroy);
         OSD_DECLARE_OP(oh, delete);
@@ -2024,6 +2023,7 @@ static int osd_object_destroy(const struct lu_env *env,
         oh = container_of0(th, struct osd_thandle, ot_super);
         LASSERT(oh->ot_handle);
         LASSERT(inode);
+        LASSERT(!lu_object_is_dying(dt->do_lu.lo_header));
 
         if (S_ISDIR(inode->i_mode)) {
                 LASSERT(osd_inode_unlinked(inode) ||
